Prevent text on right side of header from wrapping

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -14,6 +14,10 @@
     }
   }
 
+  &__side {
+    white-space: nowrap;
+  }
+
   &__date {
     font-family: $font-akagi;
     font-size: 15px;
